--- a/phinx.yml
+++ b/phinx.yml
@@ -8,8 +8,11 @@ templates:
   file: %%PHINX_CONFIG_DIR%%/src/Migrations/stubs/create.stub
 
 environments:
+  adapter: sqlite
+  name: %%PHINX_CONFIG_DIR%%/database/database.sqlite3
   default_migration_table: phinxlog
   default_database: dev
   dev:
     adapter: sqlite
-    name: Uqam\Migrations\Migration::DB_PATH
+    name: %%PHINX_CONFIG_DIR%%/database/database.sqlite3
+
