--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "illuminate/database": "^5.4",
-        "robmorgan/phinx": "^0.8.0"
+        "robmorgan/phinx": "^0.8.0",
+        "doctrine/dbal": "^2.5"
     },
     "autoload": {
         "psr-4": {
